// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationProgress renders correctly with all selected 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
}

.emotion-8 {
=======
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with default props 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
}

.emotion-8 {
=======
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-16 {
=======
.emotion-9 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-18 {
=======
.emotion-10 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-16 emotion-5"
      >
        <div
          class="emotion-18 emotion-19"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
=======
        class="emotion-9"
      >
        <div
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
=======
      class="emotion-6"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    />
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-16 emotion-5"
      >
        <div
          class="emotion-18 emotion-19"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
=======
        class="emotion-9"
      >
        <div
          class="emotion-10"
        />
      </div>
      <div
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with selected prop 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
}

.emotion-8 {
=======
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-16 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-30 {
=======
.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-24 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-14"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-28 emotion-5"
      >
        <div
          class="emotion-30 emotion-31"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
=======
        class="emotion-16"
      >
        <div
          class="emotion-17"
        />
      </div>
      <div
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 3
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
=======
      class="emotion-6"
>>>>>>> refactor: migrate colors from theme in icon (#160)
    />
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly with steps number 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  from {
    width: 0;
  }

  to {
    width: 100%;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #fff;
}

<<<<<<< HEAD
.emotion-7.emotion-7 {
=======
.emotion-4.emotion-4 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  color: #fff;
  font-weight: 500;
}

<<<<<<< HEAD
.emotion-8 {
=======
.emotion-5 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-6 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-7 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-14 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-16 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-31 {
=======
.emotion-18 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
<<<<<<< HEAD
  color: #dce1eb;
}

.emotion-31.emotion-31 {
  color: #dce1eb;
=======
}

.emotion-18.emotion-18 {
>>>>>>> refactor: migrate typography to use colors from theme (#155)
  font-weight: 500;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
<<<<<<< HEAD
          class="emotion-6 emotion-7"
=======
          class="emotion-3 emotion-4"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
        >
          1
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <div
<<<<<<< HEAD
          class="emotion-6 emotion-7"
=======
          class="emotion-3 emotion-4"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
        >
          2
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-24 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-14"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-28 emotion-5"
      >
        <div
          class="emotion-6 emotion-31"
=======
        class="emotion-16"
      >
        <div
          class="emotion-3 emotion-18"
          style="color: rgb(220, 225, 235);"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
        >
          3
        </div>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate typography to use colors from theme (#155)
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreationProgress renders correctly without animation 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 120px;
}

.emotion-4 {
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: #45d6b5;
}

<<<<<<< HEAD
.emotion-7 {
=======
.emotion-4 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  fill: #fff;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

<<<<<<< HEAD
.emotion-7.emotion-7 {
  vertical-align: middle;
}

.emotion-8 {
=======
.emotion-4.emotion-4 {
  vertical-align: middle;
}

.emotion-5 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  margin-top: 16px;
  font-size: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: center;
}

<<<<<<< HEAD
.emotion-10 {
=======
.emotion-6 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 4px;
  margin-left: -36px;
  margin-right: -36px;
  margin-top: 12px;
  border-radius: 2px;
  background-color: #d4dae7;
}

<<<<<<< HEAD
.emotion-12 {
=======
.emotion-7 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 100%;
}

<<<<<<< HEAD
.emotion-24 {
=======
.emotion-14 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  border-radius: 2px;
  background-color: #45d6b5;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
}

<<<<<<< HEAD
.emotion-28 {
=======
.emotion-16 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  height: 32px;
  width: 32px;
  border-radius: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  border-style: solid;
  border-color: #d4dae7;
  border-width: 3px;
}

<<<<<<< HEAD
.emotion-30 {
=======
.emotion-17 {
>>>>>>> refactor: migrate colors from theme in icon (#160)
  background-color: #d4dae7;
  height: 8px;
  width: 8px;
  border-radius: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 1
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-12 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-7"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4 emotion-5"
      >
        <svg
<<<<<<< HEAD
          class="sc-ui-icon emotion-6 emotion-7"
=======
          class="sc-ui-icon emotion-3 emotion-4"
>>>>>>> refactor: migrate colors from theme in icon (#160)
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
      <div
<<<<<<< HEAD
        class="emotion-8 emotion-9"
=======
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 2
      </div>
    </div>
    <div
<<<<<<< HEAD
      class="emotion-10 emotion-11"
    >
      <div
        class="emotion-24 emotion-13"
=======
      class="emotion-6"
    >
      <div
        class="emotion-14"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      />
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
<<<<<<< HEAD
        class="emotion-28 emotion-5"
      >
        <div
          class="emotion-30 emotion-31"
        />
      </div>
      <div
        class="emotion-8 emotion-9"
=======
        class="emotion-16"
      >
        <div
          class="emotion-17"
        />
      </div>
      <div
        class="emotion-5"
>>>>>>> refactor: migrate colors from theme in icon (#160)
      >
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
